added login and lint

--- a/src/components/add-event-panel/add-event-panel.css
+++ b/src/components/add-event-panel/add-event-panel.css
@@ -1,4 +1,4 @@
-.add-panel {
+/* .add-panel {
     margin: 25px;
     width: 60px;
     height: 60px;
@@ -80,4 +80,4 @@ input[type="submit"] {
         opacity: 100;
     }
   }
-
+ */
