--- a/src/components/login-overlay/login-overlay.css
+++ b/src/components/login-overlay/login-overlay.css
@@ -6,7 +6,8 @@
     left: 0;
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
     border-radius: 5px;
-    background-color: rgba(255, 255, 255, .15);
+    background-color: #B3413D;
+    /* background-color: rgba(255, 255, 255, .15); */
     backdrop-filter: blur(5px);
     opacity: 0;
     visibility: hidden;
@@ -22,46 +23,23 @@
     all: unset;
     color: white;
     cursor: pointer;
-    margin: 25px;
     display: flex;
     justify-content: center;
-    align-items: center;
     font-family: "montserrat-semibold";
-    position: absolute;
+    /* position: absolute;
+    
     top: 0;
-    left: 0;
-    transform: rotate(45deg);
+    left: 0; */
+    /* transform: rotate(45deg); */
     /* transition: all 0.2s ease-in-out; */
 }
 
 .close-button-text {
     color: #E5E1D5;
-    font-size: 6rem;
+    font-size: 17rem;
     transition: all 0.5s ease-in-out;
 }
 
 .close-button-text.clicked {
     transform: rotate(180deg);
-}
-
-input[type="text"] {
-    all: unset;
-    color: black;
-    background-color: white;
-    height: 50px;
-    padding: 0 10px;
-    margin-bottom: 10px;
-    border-radius: 7px;
-}
-
-input[type="submit"] {
-    all: unset;
-    height: 50px;
-    background-color: white;
-    display: flex;
-    justify-content: center;
-    font-family: 'montserrat-medium';
-    font-size: 1.5em;
-    color: black;
-    border-radius: 7px;
 }
