--- a/src/components/login-overlay-component/login-overlay-component.css
+++ b/src/components/login-overlay-component/login-overlay-component.css
@@ -7,7 +7,7 @@
     box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
     border-radius: 5px;
     background: #c94b4b;  /* fallback for old browsers */
-    background: linear-gradient(to right, #4b134f, #c94b4b);
+    background: linear-gradient(to right, #333735,#676e6a);
     backdrop-filter: blur(5px);
     opacity: 0;
     visibility: hidden;
@@ -35,7 +35,7 @@
 }
 
 .close-button-text {
-    color: #E5E1D5;
+    color: white;
     font-size: 17rem;
     transition: all 0.5s ease-in-out;
 }
