--- a/src/components/add-event-panel-component/add-event-panel-component.css
+++ b/src/components/add-event-panel-component/add-event-panel-component.css
@@ -5,11 +5,12 @@
 
 input[type="submit"] {
     all: unset;
-    margin-top: 20px;
     height: 50px;
+    margin-bottom: 30px;
     background-color: white;
     display: flex;
     justify-content: center;
+    cursor: pointer;
     font-family: 'montserrat-medium';
     font-size: 1.5em;
     color: black;
