--- a/src/pages/landing-page/landing-page.css
+++ b/src/pages/landing-page/landing-page.css
@@ -1,3 +1,4 @@
+/* TODO Break out and move to components styled components part */
 .landing-page {
     height: 100vh;
     height: calc(var(--vh, 1vh) * 100);
