--- a/src/index.css
+++ b/src/index.css
@@ -188,6 +188,11 @@ h2 {
   }
 }
 
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
 /*--------------------------------------
 ------------------Fonts-----------------
 --------------------------------------*/
