--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,11 @@
+:root {
+  --calendar-black: #333
+}
+
 body {
   margin: 0;
   background: #fff;
-  color: #333;
+  color: var(--calendar-black);
   font-family: georgia, serif;
   font-size: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
